--- a/index.html
+++ b/index.html
@@ -88,14 +88,17 @@
                       <h1 class="name3">Skills</h1>
 
     <div class="img-content">
-        <img class="skill-img" src="./assets/image/img786.jpg" alt="">
+        <img class="skill-img" src="./assets/image/img0001.jpg" alt="">
+        <img class="skill-img" src="./assets/image/img0002.jpg" alt="">
+        <img class="skill-img" src="./assets/image/img0003.jpg" alt="">
+        <img class="skill-img" src="./assets/image/img0003.jpg" alt="">
     </div>
 
      <div class="skill-content">
-         <h3 class="skill-name">JavaScript</h3>
-         <h3 class="skill-name">Git Hub</h3>
-         <h3 class="skill-name000">CSS</h3>
-         <h3 class="skill-name00">HTML</h3>
+         <h3 class="skill-name">HTML</h3>
+         <h3 class="skill-name0000">CSS</h3>
+         <h3 class="skill-name000">Git Hub </h3>
+         <h3 class="skill-name00">JavaScript</h3>
     </div>
 
  </div>
@@ -158,7 +161,7 @@
      </div>
 
      <div class="last-line">
-         <h4>&copy;2024 by senthilnathan all rights reserved</h4>
+         <h4>&copy;2024 by senthilnathan all rights reserved.</h4>
      </div>
 
 </div>
