--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header">
 
     <div class="header-name">
-        <h3 class="header-name1">Spritful __ Senthilnathan.</h3>
+        <h3 class="header-name1">Spiritful __ Senthilnathan.</h3>
     </div>
 
     <div class="navbar">
@@ -40,13 +40,13 @@
     <div class="icon-logo">
         <a class="icon1" href="https://github.com/senthilnathan-es02"><img class="git-logo" src="./assets/image/img222.png" alt=""></a>
         <a class="icon1" href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit"><img class="git-logo" src="./assets/image/img234.webp" alt=""></a>
-        <a class="icon2" href="https://www.instagram.com/_insta_farvez_02/"><img class="git-logo" src="./assets/image/img123.jpg" alt=""></a>
+        <a class="icon2" href="mailto:senthilnathan.eswaran@fssa.freshworks.com"><img class="git-logo" src="./assets/image/img111.png" alt=""></a>
     </div>
 
     <div class="home-content">
-
-        <h1 class="name00">SENTHILNATHAN,</h1>
-        <h2 class="name01">  ⏤⏤⏤⏤ Web Developer ♡</h2>
+        <h4>Hey, This is </h4>
+        <h1 class="name00">SENTHILNATHAN</h1>
+        <h2 class="name01">  ⏤⏤⏤⏤ Web Developer </h2>
         <p class="name02">I'm  a  web  developer  from  Theni, and
                     <br>I'm  very  passionate  and  dedicated  to  my  work.</p>
         <a class="button-name" href="#contact"><button class="say-hello">Say Hello  ➪</button></a>
@@ -65,13 +65,7 @@
     <div class="about-content">
 
          <h1 class="name2">About Me</h1>
-         <h5 class="name20">☆ My Introduction</h5>
-         <p class="about-content1">I'm Senthilnathan, from Theni, born to a family of weavers.Currently, 
-                         I'm a student at Freshworks STS Software Academy, 
-                         mastering web technologies like HTML, CSS,and JavaScript. 
-                         FSSA has transformed my life, and my ultimate goal 
-                         is to become a full-stack developer and delve into IoT. My cousin inspires
-                         me with their guidance.</p>
+         <p class="about-content1">"My name is Senthilnathan, and I'm from Theni, born into a family of weavers. Currently, I'm a student at Freshworks STS Software Academy, mastering web technologies like HTML, CSS, and JavaScript. FSSA has transformed my life, and my ultimate goal is to become a full-stack developer and grow in the IT field."</p>
          <a class="download-link" href="./assets/image/Senthilnathan-CV.pdf" download ><button class="download">Download CV ✔✔</button></button></a>
             
     </div>
@@ -107,7 +101,7 @@
  <div class="contact-container"  id="contact">
 
      <div class="logo-content">
-        <h3 class="logo-heading">Let's get in Touch.</h3>
+        <h3 class="logo-heading">Let's get in Touch</h3>
         <img class="logo-img" src="./assets/image/img19.jpg" alt="">
      </div>
 
@@ -151,13 +145,15 @@
 <div class="footer-container">
 
      <div class="footer-content">
-        <h3 class="footer-name">Spritful __ Senthilnathan.</h3>
+        <h3 class="footer-name">Spiritful __ Senthilnathan.</h3>
      </div>
 
      <div class="footer-logo">
+        <a class="icon-link" href="https://github.com/senthilnathan-es02"><img class="icon3" src="./assets/image/img222.png" alt=""></a>
+        <a class="icon-link" href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit"><img class="icon3" src="./assets/image/img234.webp" alt=""></a>
          <a class="icon-link" href="mailto:senthilnathan.eswaran@fssa.freshworks.com"><img class="icon3" src="./assets/image/img111.png" alt=""></a>
-         <a class="icon-link" href="https://www.facebook.com/profile.php?id=100030097211550"><img class="icon3" src="./assets/image/img222.jpg" alt=""></a>
-         <a class="icon-link" href="https://x.com/eswarensenthil"><img class="icon3" src="./assets/image/img333.webp" alt=""></a>
+
+
      </div>
 
      <div class="last-line">
