--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senthilnathan Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -19,6 +19,7 @@
             <a href="#about" class="navbar">About</a>
             <a href="#education" class="navbar">Education</a>
             <a href="#skill" class="navbar">Skills</a>
+            <a href="#project" class="navbar">Project</a>
             <a href="#contact" class="navbar">Contact</a>
         </div>
     </div>
@@ -193,6 +194,39 @@
 
 
 
+
+
+
+
+<!-- projects page -->
+<div class="project-container" id="project">
+
+    <div class="project-heading">
+        <h1>Projects</h1>
+        <p>My Works</p>
+    </div>
+
+    <div class="project-pages">
+
+        <div class="project-content">
+            <img src="/assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
+            <h3>Aero Hub</h3>
+            <div class="btn">
+                <a href="https://aero-hub.netlify.app/">View More &#x2192;</a>
+            </div>
+        </div>
+
+        <div class="project-content">
+            <img src="/assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
+            <h3>Text to Audio</h3>
+            <div class="btn">
+                <a href="#">View More &#x2192;</a>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 
 
