--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senthilnathan Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
             <button id="sayhello">Say Hello <i class="fa-solid fa-paper-plane"></i></button>
         </div>
         <div class="home-image">
-            <img class="image-profile" src="./assets/image/profile-img.jpg" alt="Profile Image">
+            <img class="image-profile" src="/assets/image/profile-img.jpg" alt="Profile Image">
         </div>
     </div>
 
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="about-photo">
-            <img id="down" class="about-photo1" src="./assets/image/about-img.jpg" alt="About Me">
+            <img id="down" class="about-photo1" src="/assets/image/about-img2.jpg" alt="About Me">
         </div>
     </div>
 
@@ -155,37 +155,37 @@
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 270deg;" data-progress="75"></div>
+                <div class="progress-circle" style="--progress: 270deg;" data-progress="77"></div>
                 <h3>HTML</h3>
                 <p>Intermediate</p>
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 250deg;" data-progress="70"></div>
+                <div class="progress-circle" style="--progress: 250deg;" data-progress="73"></div>
                 <h3>CSS</h3>
                 <p>Intermediate</p>
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 230deg;" data-progress="65"></div>
+                <div class="progress-circle" style="--progress: 230deg;" data-progress="68"></div>
                 <h3>JavaScript</h3>
                 <p>Intermediate</p>
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 150deg;" data-progress="40"></div>
+                <div class="progress-circle" style="--progress: 150deg;" data-progress="42"></div>
                 <h3>MySQL</h3>
                 <p>Basic</p>
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 70deg;" data-progress="20"></div>
+                <div class="progress-circle" style="--progress: 70deg;" data-progress="22"></div>
                 <h3>React js</h3>
                 <p>Basic</p>
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 250deg;" data-progress="70"></div>
+                <div class="progress-circle" style="--progress: 290deg;" data-progress="79"></div>
                 <h3>Git Hub</h3>
                 <p>Intermediate</p>
             </div>
@@ -209,16 +209,18 @@
     <div class="project-pages">
 
         <div class="project-content">
-            <img src="./assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
+            <img src="/assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
             <h3>Aero Hub</h3>
+            <p>Platform of a Flight Ticket Booking App</p>
             <div class="btn">
                 <a href="https://aero-hub.netlify.app/">View More &#x2192;</a>
             </div>
         </div>
 
         <div class="project-content">
-            <img src="./assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
+            <img src="/assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
             <h3>Text to Audio</h3>
+            <p>Text to Audio Converter App</p>
             <div class="btn">
                 <a href="#">View More &#x2192;</a>
             </div>
@@ -238,7 +240,7 @@
     <div class="contact-container" id="contact">
         <div class="logo-content">
             <h3>Let's Get in Touch</h3>
-            <img class="logo-img" src="./assets/image/contact-img.jpg" alt="Contact Image">
+            <img class="logo-img" src="/assets/image/contact-img.jpg" alt="Contact Image">
         </div>
         <div class="contact-content">
             <div class="submit-form">
