--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button id="sayhello">Say Hello <i class="fa-solid fa-paper-plane"></i></button>
         </div>
         <div class="home-image">
-            <img class="image-profile" src="/assets/image/profile-img.jpg" alt="Profile Image">
+            <img class="image-profile" src="./assets/image/profile-img.jpg" alt="Profile Image">
         </div>
     </div>
 
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="about-photo">
-            <img id="down" class="about-photo1" src="/assets/image/about-img2.jpg" alt="About Me">
+            <img id="down" class="about-photo1" src="./assets/image/about-img2.jpg" alt="About Me">
         </div>
     </div>
 
@@ -209,7 +209,7 @@
     <div class="project-pages">
 
         <div class="project-content">
-            <img src="/assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
+            <img src="./assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
             <h3>Aero Hub</h3>
             <p>Platform of a Flight Ticket Booking App</p>
             <div class="btn">
@@ -218,7 +218,7 @@
         </div>
 
         <div class="project-content">
-            <img src="/assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
+            <img src="./assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
             <h3>Text to Audio</h3>
             <p>Text to Audio Converter App</p>
             <div class="btn">
@@ -240,7 +240,7 @@
     <div class="contact-container" id="contact">
         <div class="logo-content">
             <h3>Let's Get in Touch</h3>
-            <img class="logo-img" src="/assets/image/contact-img.jpg" alt="Contact Image">
+            <img class="logo-img" src="./assets/image/contact-img.jpg" alt="Contact Image">
         </div>
         <div class="contact-content">
             <div class="submit-form">
