--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <h3>Text to Audio</h3>
             <p>Text to Audio Converter App</p>
             <div class="btn">
-                <a href="#">View More &#x2192;</a>
+                <a href="https://senthilnathan-es02.github.io/Text-To-Audio_converter/">View More &#x2192;</a>
             </div>
         </div>
 
