--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="about-photo">
-            <img id="down" class="about-photo1" src="./assets/image/about-img2.jpg" alt="About Me">
+            <img id="down" class="about-photo1" src="./assets/image/my img.jpg" alt="About Me">
         </div>
     </div>
 
@@ -179,9 +179,9 @@
             </div>
 
             <div class="skill-lang">
-                <div class="progress-circle" style="--progress: 70deg;" data-progress="22"></div>
-                <h3>React js</h3>
-                <p>Basic</p>
+                <div class="progress-circle" style="--progress: 270deg;" data-progress="75"></div>
+                <h3>Bootstrap</h3>
+                <p>Intermediate</p>
             </div>
 
             <div class="skill-lang">
