--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
         </div>
 
         <div class="project-content">
-            <img src="./assets/image/text-to-audio.png" alt="Text to Audio Logo" width="250px">
-            <h3>Text to Audio</h3>
-            <p>Text to Audio Converter App</p>
+            <img src="https://pbs.twimg.com/profile_images/1246161854373584896/pF9PQcRA_400x400.jpg" alt="Text to Audio Logo" width="250px">
+            <h3>Designspiration</h3>
+            <p>Recreating the full design of the Designspiration app.            </p>
             <div class="btn">
-                <a href="https://senthilnathan-es02.github.io/Text-To-Audio_converter/">View More &#x2192;</a>
+                <a href="https://designspiartion-recreate.netlify.app/">View More &#x2192;</a>
             </div>
         </div>
 
