--- a/index.html
+++ b/index.html
@@ -204,16 +204,16 @@
     <div class="project-pages">
 
         <div class="project-content">
-            <img src="./assets/image/app-logo-removebg-preview.png" alt="Aero Hub Logo" width="180px">
+            <img src="https://images.scalebranding.com/070d4f22-8557-44cc-bfd8-2d62e0d6a7f8.png" alt="Aero Hub Logo" width="180px" height="150px">
             <h3>Aero Hub</h3>
-            <p>Platform of a Flight Ticket Booking App</p>
+            <p>Platform of a Flight <br> Ticket Booking App</p>
             <div class="btn">
                 <a href="https://aero-hub.netlify.app/">View More &#x2192;</a>
             </div>
         </div>
 
         <div class="project-content">
-            <img src="https://pbs.twimg.com/profile_images/1246161854373584896/pF9PQcRA_400x400.jpg" alt="Text to Audio Logo" width="250px">
+            <img src="https://pbs.twimg.com/profile_images/1246161854373584896/pF9PQcRA_400x400.jpg" alt="Text to Audio Logo" width="180px" height="150px">
             <h3>Designspiration</h3>
             <p>Recreating the full design of the Designspiration app.            </p>
             <div class="btn">
