--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p>
                     My name is Senthilnathan, and I'm from Theni, born into a family of weavers.
                     Currently, I'm a student at Freshworks STS Software Academy,
-                    mastering web technologies like HTML, CSS, JavaScript and Bootstrap.
+                    mastering web technologies like HTML, CSS, SASS, JavaScript, Bootstrap and React js.
                     FSSA has transformed my life, and my ultimate goal is to become a skilled Full-stack developer.
                 </p>
                 <button id="download-cv">Download CV <i class="fa-regular fa-file"></i></button>
@@ -191,6 +191,14 @@
                 <h3>Bootstrap</h3>
                 <p>Intermediate</p>
             </div>
+
+
+            <div class="skill-lang">
+                <div class="progress-circle" style="--progress: 196deg;" data-progress="52"></div>
+                <h3>React js</h3>
+                <p>Intermediate</p>
+            </div>
+
 
         </div>
     </div>
